src/App.css
.App {
  text-align: center;
  background: linear-gradient(to right, #032733, #416e7c);
  color: rgb(11, 148, 179);
  min-height: 100vh;
  /* position: relative; */
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #283234;
  /* min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin); */
  color: rgb(11, 148, 179);
}

.MainComponents {
  /* background: linear-gradient(to right, #032733, #416e7c); */
  color: #80b5c1;
}

.Icons {
  color: #80b5c1;
}

.App-link {
  color: #80b5c1;
}

nav {
  display: flex;
  justify-content: space-around;
  align-items: center;
  background: -o-linear-gradient(#268397);
  color: #80b5c1;
  border-radius: 5px;
  box-shadow: 0 5px 10px rgb(42, 41, 41);
  

  /* opacity: 0.5; */
}

.navbar {
  height: 69px;
  position: fixed;
  top: 0;
  overflow: hidden;

}

.NavStuff {
  display: flex;
  justify-content: space-around;
  align-items: center;
  width: 70%;
  list-style: none;
  position: fixed;
  width: 100%;
  top: 69;
  left: 0;
}

.Top-for-bar {
  margin-top: 69px;
}

.Home {
  color: #80b5c1;
  /* min-height: 100vh; */
}

.Landing {
  min-height: 105vh;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat, repeat;
  background-image: url("https://imagesvc.meredithcorp.io/v3/mm/image?q=85&c=sc&poi=face&w=2997&h=1499&url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F34%2F2019%2F07%2F12164029%2Fpetting-dog-getty-0719.jpg");
}

.Locations-row {
  padding: 15px;
}

@media screen and (max-width: 768px) {
  .Desk-view {
    display: none;
    color: #80b5c1;
  }
}

.refusesToCenter {
  margin-left: auto;
  margin-right: auto;
  justify-content: center;
}

.Trip-table {
  /* border-style: groove;
  border-color: #80b5c1;
  border-radius: 5px; */
  /* box-shadow: 0 5px 10px rgb(42, 41, 41); */
  display: flex;
  justify-content: center;
  color: #80b5c1;
}

.Intro {
}

